tests/errors/semantic/blocking/UNDEFINED_LAMBDA_FUNCTION.py
a = lambda x: 1+b()

